# rust-admin

./: .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  doc.md  full_diff.patch  patch_developer_service.sh  qiluo.sql  summaries.md  summaries2.md  summaries_final.md  summaries_final2.md  summarize.py  test-expand.vue
config/: development.yaml
docs/: ARCHITECTURE_ANALYSIS.md  OPTIMIZATION_PLAN.md  PROJECT_CONSTITUTION.md  PlUGIN_MODIFY.md  REFACTORING_REPORT.md
frontend/: .env  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
macros/: Cargo.toml
migration/: Cargo.toml  README.md
migrations/: ecomadmin_mock_data.sql  m20260322_001_c_user_create_tables.sql  m20260322_002_c_user_menu_permission.sql  m20260322_003_c_user_extension_tables.sql  m20260322_004_c_after_sale_tables.sql  m20260322_005_c_user_extension_menu_permission.sql  m20260322_006_c_consumer_api_permission.sql  m20260322_007_assign_role_menu.sql  m20260322_008_c_consumer_mock_data.sql  m20260322_009_c_missing_menu_permission.sql  m20260322_010_update_menu_icons.sql  m20260322_011_fix_menu_icons.sql  m20260322_012_fix_menu_status.sql  m20260322_013_fix_menu_status_and_icons.sql  m20260322_014_fix_missing_menu_icons.sql  m20260322_015_reorganize_menu_structure.sql  m20260322_016_create_payment_channel_table.sql  m20260322_017_add_dict_deleted_at.sql  m20260322_017_insert_test_data.sql  m20260322_018_create_config_tables.sql  m20260322_018_update_job_log.sql  m20260322_019_fix_job_log.sql  m20260323_001_product_create_tables.sql  m20260323_002_product_menu_permission.sql  m20260323_003_product_api_permission.sql  m20260323_004_product_mock_data.sql  m20260324_001_plugin_market_create_tables.sql  m20260325_001_plugin_market_menu_permission.sql  m20260325_002_plugin_market_verification_code.sql  m20260326_001_cms_core_tables.sql  m20260326_002_cms_content_tables.sql  m20260326_003_cms_config_tables.sql  m20260326_004_cms_menu.sql  m20260326_005_cms_permission.sql  m20260327_001_ppt_project_create_table.sql  m20260327_002_ppt_page_create_table.sql  m20260327_003_page_element_create_table.sql  m20260327_004_style_template_create_table.sql  m20260327_005_ai_generation_log_create_table.sql  m20260327_006_ppt_menu.sql  (+9 more)
src/: api.rs  app.rs  banner.rs  cache.rs  common.rs  config.rs  db.rs  lib.rs  main.rs  (+4 more)
(+2012 files in other folders)
