[package]
name = "qiluo"
version = "0.1.0"
edition = "2021"

[dependencies]
migration = { path = "migration" }
axum = { version = "0.8.7", default-features = true, features = ["http1", "http2", "json", "macros", "matched-path", "original-uri", "multipart", "tokio", "ws", "form", "query"] }
fs-err = "3.2.0"
jsonwebtoken ={ version = "10.2.0", features = ["aws_lc_rs"] }
sea-orm ={ version =  "1.1.19", features = [
  "sqlx-sqlite",
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_variant = "0.1.3"
serde_yaml = "0.9.34"
tera = "1.20.1" 
tokio =  { version = "1.48.0", features = ["full"] }
tower-http = { version =  "0.6.6", features = [
  "trace",
  "catch-panic",
  "timeout",
  "add-extension",
  "cors",
  "fs",
  "set-header",
  "compression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter","json","local-time", "registry"]}
validator ={ version = "0.20.0", features = ["derive"] }
hyper = "1.8.1"
bytes = "1.11.0"
http-body-util = "0.1.3"
axum-extra ={ version =  "0.12.2", features = ["typed-header"]}
chrono = "0.4.42"
once_cell = "1.21.3" 
lazy_static = "1.5.0"
argon2 = "0.5.3"
rand = "0.9.2"
thiserror = "2.0.17"
http-body = "1.0.1"
captcha_rust = "0.1.3"
indexmap = "2.12.0"
reqwest ={ version = "0.12.24", features = ["json"] }
sysinfo = "0.37.2"
user-agent-parser = "0.3.6"
lettre =  { version ="0.11.19", default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tokio1-rustls-tls",
] }
async-trait = "0.1.89"
bb8 = "0.9.0"    
time = "0.3.44"
image = "0.25.9"   
tokio-util = "0.7.17"
redis ={version= "0.32",features = [
    "aio",
    "default",
    "tokio-comp",
     "connection-manager"
]}
sha2 = "0.10.9"
axum-core = "0.5.5"
cron_clock = "0.8.0"
convert_case = "0.9.0"
hex = "0.4.3"
headers = "0.4.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
async_static = "0.1.3"
byte-unit = "5.1.6"
base64 = "0.22.1" 
sha1 = "0.10.6"
serde-xml-rs = "0.8.2"  
dashmap = "6.1.0" 
bb8-redis = "0.24.0"
tokio-rustls = "0.26.4"
tracing-appender = "0.2.3"
axum-server = {version="0.7.3",features=["tls-rustls"]}
parking_lot = "0.12.5"
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
